--- a/Ex2/web_app/public/stylesheets/exp_style.css
+++ b/Ex2/web_app/public/stylesheets/exp_style.css
@@ -6,7 +6,7 @@
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   width: 350px;
   height: 100px;
   background: rgba(0, 0, 0, 0.106);
@@ -24,7 +24,7 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   height: 200px;
-  width: 800px;
+  width: 850px;
   flex-wrap: wrap;
 }
 
@@ -38,8 +38,10 @@ h1 {
 }
 
 .option {
-
-  width: 300px;
+  word-break: break-all;
+  min-width: 320px;
+  max-width: 430px;
+  width: fit-content;
   height: 70px;
   position: relative;
   background: #fff;
@@ -47,7 +49,7 @@ h1 {
   border-radius: 20px;
   border: none;
   text-align: center;
-  font-size: 24px;
+  font-size: 2.0em;
   color: rgb(0, 0, 0);
   cursor: pointer;
   transition: all 0.1s ease-in-out;
@@ -84,13 +86,13 @@ p {
   h1 {
     width: 400px;
     height: 120px;
-    font-size: 4em;
+    font-size: 3em;
   }
 
   .option {
-    width: 350px;
+    min-width: 370px;
     height: 100px;
-    font-size: 3em;
+    font-size: 2.4em;
   }
 
   h3 {
