--- a/Ex2/web_app/views/experimentview.ejs
+++ b/Ex2/web_app/views/experimentview.ejs
@@ -61,9 +61,9 @@
     var divDesc = document.getElementById("desc")
     var divExp = document.getElementById("experiment")
     var testCases = [
-        {0:"1", 1:"2", case:"camelcase", words:["hello world","helli world","hello woord","hello words"]},
-        {0:"4", 1:"1", case:"kebabcase", words:["correct index","correct jndex","cprrect index","correct indez"]},
-        {0:"2", 1:"3", case:"camelcase", words:["start time","srart time","start tyme","stars time"]}
+        {"index":"2", case:"camelcase", words:["hello world","helli world","hello woord","hello words"]},
+        {"index":"1", case:"kebabcase", words:["correct index","correct jndex","cprrect index","correct indez"]},
+        {"index":"3", case:"camelcase", words:["start time","srart time","start tyme","stars time"]}
     ]
     var options = [
         document.getElementById("option1"),
@@ -90,7 +90,7 @@
         return words.map(a => a[0].toUpperCase() + a.substring(1)).join(" ")
     }
     var style = camelcase
-    function end() {
+    async function end() {
         if (testing) {
             divExp.style.display = "none"
             divDesc.style.display = "flex"
@@ -105,7 +105,10 @@
             } else {
                 localStorage.setItem("finished", 1)
             }
-            fetch('/data', {method:"PATCH", body:JSON.stringify({is:indexSet, cs:caseSet, data:localStorage.getItem("final")})})
+            await fetch('/finish', {method:"POST", body:JSON.stringify({is:indexSet, cs:caseSet})})
+            data = JSON.parse(localStorage.getItem("final"))
+            while (data.length > 0)
+                await fetch('/data', {method:"PATCH", body:JSON.stringify(data.splice(0, 8))})
             localStorage.removeItem("final")
             window.location.href = "/done"
         }
