Final touches to web app

--- a/Ex2/web_app/views/doneview.ejs
+++ b/Ex2/web_app/views/doneview.ejs
@@ -1,7 +1,14 @@
 <link href="stylesheets/style.css" rel="stylesheet" />
 
 <body>
+    <div style="display: flex; flex-direction: column; height: 100%; justify-content: center;">
     <h2>
         Thank you for participating in the experiment!
     </h2>
+    <div class="description" style="display: flex; align-items: center; flex-direction: column; margin: 5px;">
+        <p>No further action is required. You may now close the page.</p>
+        <p>Thank you for your time.</p>
+    </div>
+</div>
+    
 </body>
